@@ -1,3 +1,7 @@
+2015-10-16  Andreas K. Foerster  <akf@akfoerster.de>
+
+	* akfavatar.h: typedef uint_least32_t avt_char;
+
 2015-09-13  Andreas K. Foerster  <akf@akfoerster.de>
 
 	* avtdata.h: macros for virtual methods
